Refactor to trips openapi spec
