# trip/swagger_server/models/trip_id_body.py
@@ -1,166 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server import util
-
-
-class TripIdBody(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self, pickup_datetime: datetime=None, dropoff_datetime: datetime=None, pickup_location_id: int=None, dropoff_location_id: int=None, passenger_count: int=None):  # noqa: E501
-        """TripIdBody - a model defined in Swagger
-
-        :param pickup_datetime: The pickup_datetime of this TripIdBody.  # noqa: E501
-        :type pickup_datetime: datetime
-        :param dropoff_datetime: The dropoff_datetime of this TripIdBody.  # noqa: E501
-        :type dropoff_datetime: datetime
-        :param pickup_location_id: The pickup_location_id of this TripIdBody.  # noqa: E501
-        :type pickup_location_id: int
-        :param dropoff_location_id: The dropoff_location_id of this TripIdBody.  # noqa: E501
-        :type dropoff_location_id: int
-        :param passenger_count: The passenger_count of this TripIdBody.  # noqa: E501
-        :type passenger_count: int
-        """
-        self.swagger_types = {
-            'pickup_datetime': datetime,
-            'dropoff_datetime': datetime,
-            'pickup_location_id': int,
-            'dropoff_location_id': int,
-            'passenger_count': int
-        }
-
-        self.attribute_map = {
-            'pickup_datetime': 'pickup_datetime',
-            'dropoff_datetime': 'dropoff_datetime',
-            'pickup_location_id': 'pickup_location_id',
-            'dropoff_location_id': 'dropoff_location_id',
-            'passenger_count': 'passenger_count'
-        }
-        self._pickup_datetime = pickup_datetime
-        self._dropoff_datetime = dropoff_datetime
-        self._pickup_location_id = pickup_location_id
-        self._dropoff_location_id = dropoff_location_id
-        self._passenger_count = passenger_count
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'TripIdBody':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The trip_id_body of this TripIdBody.  # noqa: E501
-        :rtype: TripIdBody
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def pickup_datetime(self) -> datetime:
-        """Gets the pickup_datetime of this TripIdBody.
-
-
-        :return: The pickup_datetime of this TripIdBody.
-        :rtype: datetime
-        """
-        return self._pickup_datetime
-
-    @pickup_datetime.setter
-    def pickup_datetime(self, pickup_datetime: datetime):
-        """Sets the pickup_datetime of this TripIdBody.
-
-
-        :param pickup_datetime: The pickup_datetime of this TripIdBody.
-        :type pickup_datetime: datetime
-        """
-
-        self._pickup_datetime = pickup_datetime
-
-    @property
-    def dropoff_datetime(self) -> datetime:
-        """Gets the dropoff_datetime of this TripIdBody.
-
-
-        :return: The dropoff_datetime of this TripIdBody.
-        :rtype: datetime
-        """
-        return self._dropoff_datetime
-
-    @dropoff_datetime.setter
-    def dropoff_datetime(self, dropoff_datetime: datetime):
-        """Sets the dropoff_datetime of this TripIdBody.
-
-
-        :param dropoff_datetime: The dropoff_datetime of this TripIdBody.
-        :type dropoff_datetime: datetime
-        """
-
-        self._dropoff_datetime = dropoff_datetime
-
-    @property
-    def pickup_location_id(self) -> int:
-        """Gets the pickup_location_id of this TripIdBody.
-
-
-        :return: The pickup_location_id of this TripIdBody.
-        :rtype: int
-        """
-        return self._pickup_location_id
-
-    @pickup_location_id.setter
-    def pickup_location_id(self, pickup_location_id: int):
-        """Sets the pickup_location_id of this TripIdBody.
-
-
-        :param pickup_location_id: The pickup_location_id of this TripIdBody.
-        :type pickup_location_id: int
-        """
-
-        self._pickup_location_id = pickup_location_id
-
-    @property
-    def dropoff_location_id(self) -> int:
-        """Gets the dropoff_location_id of this TripIdBody.
-
-
-        :return: The dropoff_location_id of this TripIdBody.
-        :rtype: int
-        """
-        return self._dropoff_location_id
-
-    @dropoff_location_id.setter
-    def dropoff_location_id(self, dropoff_location_id: int):
-        """Sets the dropoff_location_id of this TripIdBody.
-
-
-        :param dropoff_location_id: The dropoff_location_id of this TripIdBody.
-        :type dropoff_location_id: int
-        """
-
-        self._dropoff_location_id = dropoff_location_id
-
-    @property
-    def passenger_count(self) -> int:
-        """Gets the passenger_count of this TripIdBody.
-
-
-        :return: The passenger_count of this TripIdBody.
-        :rtype: int
-        """
-        return self._passenger_count
-
-    @passenger_count.setter
-    def passenger_count(self, passenger_count: int):
-        """Sets the passenger_count of this TripIdBody.
-
-
-        :param passenger_count: The passenger_count of this TripIdBody.
-        :type passenger_count: int
-        """
-
-        self._passenger_count = passenger_count
